Resultados terminal/MIN OS 2.txt
PS C:\Users\Gaming\Desktop\ProjetoOtimizador> javac Server.java
Server.java:58: error: unmappable character (0x8D) for encoding windows-1252
            // --- CORRE├ç├âO CR├?TICA: FOR├çAR UTF-8 ---
                                 ^
1 error
PS C:\Users\Gaming\Desktop\ProjetoOtimizador> javac Server.java
Server.java:58: error: unmappable character (0x8D) for encoding windows-1252
            // --- CORRE├ç├âO CR├?TICA: FOR├çAR UTF-8 ---
                                 ^
1 error
PS C:\Users\Gaming\Desktop\ProjetoOtimizador> javac Server.java
PS C:\Users\Gaming\Desktop\ProjetoOtimizador> java Server      
>>> [JAVA] SERVIDOR PRONTO EM: http://localhost:8080

>>> [JAVA] INICIANDO: GA -> modelo10.exe
[PYTHON]: DEBUG: Executavel encontrado: modelo10.exe
[PYTHON]: DEBUG: Config: ga, Dim: 9
[PYTHON]: DEBUG: Iniciando loop principal...
[PYTHON]: {"iteracao": 1, "ga_best": 403.57}
[PYTHON]: {"iteracao": 2, "ga_best": 403.57}
[PYTHON]: {"iteracao": 3, "ga_best": 522.66}
[PYTHON]: {"iteracao": 4, "ga_best": 612.21}
[PYTHON]: {"iteracao": 5, "ga_best": 612.21}
[PYTHON]: {"iteracao": 6, "ga_best": 612.21}
[PYTHON]: {"iteracao": 7, "ga_best": 612.21}
[PYTHON]: {"iteracao": 8, "ga_best": 619.66}
[PYTHON]: {"iteracao": 9, "ga_best": 619.66}
[PYTHON]: {"iteracao": 10, "ga_best": 619.66}
[PYTHON]: {"iteracao": 11, "ga_best": 619.66}
[PYTHON]: {"iteracao": 12, "ga_best": 633.87}
[PYTHON]: {"iteracao": 13, "ga_best": 633.87}
[PYTHON]: {"iteracao": 14, "ga_best": 733.96}
[PYTHON]: {"iteracao": 15, "ga_best": 753.1}
[PYTHON]: {"iteracao": 16, "ga_best": 767.3}
[PYTHON]: {"iteracao": 17, "ga_best": 771.6}
[PYTHON]: {"iteracao": 18, "ga_best": 771.6}
[PYTHON]: {"iteracao": 19, "ga_best": 771.6}
[PYTHON]: {"iteracao": 20, "ga_best": 784.46}
[PYTHON]: {"iteracao": 21, "ga_best": 784.46}
[PYTHON]: {"iteracao": 22, "ga_best": 790.16}
[PYTHON]: {"iteracao": 23, "ga_best": 790.16}
[PYTHON]: {"iteracao": 24, "ga_best": 790.16}
[PYTHON]: {"iteracao": 25, "ga_best": 792.01}
[PYTHON]: {"iteracao": 26, "ga_best": 792.01}
[PYTHON]: {"iteracao": 27, "ga_best": 792.01}
[PYTHON]: {"iteracao": 28, "ga_best": 792.01}
[PYTHON]: {"iteracao": 29, "ga_best": 792.01}
[PYTHON]: {"iteracao": 30, "ga_best": 793.16}
[PYTHON]: {"iteracao": 31, "ga_best": 793.16}
[PYTHON]: {"iteracao": 32, "ga_best": 793.16}
[PYTHON]: {"iteracao": 33, "ga_best": 793.16}
[PYTHON]: {"iteracao": 34, "ga_best": 793.16}
[PYTHON]: {"iteracao": 35, "ga_best": 793.16}
[PYTHON]: {"iteracao": 36, "ga_best": 796.2}
[PYTHON]: {"iteracao": 37, "ga_best": 796.2}
[PYTHON]: {"iteracao": 38, "ga_best": 796.2}
[PYTHON]: {"iteracao": 39, "ga_best": 841.0}
[PYTHON]: {"iteracao": 40, "ga_best": 844.04}
[PYTHON]: {"iteracao": 41, "ga_best": 844.04}
[PYTHON]: {"iteracao": 42, "ga_best": 844.04}
[PYTHON]: {"iteracao": 43, "ga_best": 851.82}
[PYTHON]: {"iteracao": 44, "ga_best": 857.75}
[PYTHON]: {"iteracao": 45, "ga_best": 857.75}
[PYTHON]: {"iteracao": 46, "ga_best": 857.75}
[PYTHON]: {"iteracao": 47, "ga_best": 857.75}
[PYTHON]: {"iteracao": 48, "ga_best": 857.75}
[PYTHON]: {"iteracao": 49, "ga_best": 863.77}
[PYTHON]: {"iteracao": 50, "ga_best": 863.77}
[PYTHON]: DEBUG: Finalizado com sucesso.

>>> [JAVA] INICIANDO: GA -> modelo10.exe
[PYTHON]: DEBUG: Executavel encontrado: modelo10.exe
[PYTHON]: DEBUG: Config: ga, Dim: 9
[PYTHON]: DEBUG: Iniciando loop principal...
[PYTHON]: {"iteracao": 1, "ga_best": -177.88}
[PYTHON]: {"iteracao": 2, "ga_best": -190.21}
[PYTHON]: {"iteracao": 3, "ga_best": -195.3}
[PYTHON]: {"iteracao": 4, "ga_best": -206.52}
[PYTHON]: {"iteracao": 5, "ga_best": -206.52}
[PYTHON]: {"iteracao": 6, "ga_best": -206.52}
[PYTHON]: {"iteracao": 7, "ga_best": -223.14}
[PYTHON]: {"iteracao": 8, "ga_best": -224.11}
[PYTHON]: {"iteracao": 9, "ga_best": -224.11}
[PYTHON]: {"iteracao": 10, "ga_best": -233.96}
[PYTHON]: {"iteracao": 11, "ga_best": -254.5}
[PYTHON]: {"iteracao": 12, "ga_best": -254.5}
[PYTHON]: {"iteracao": 13, "ga_best": -254.5}
[PYTHON]: {"iteracao": 14, "ga_best": -254.5}
[PYTHON]: {"iteracao": 15, "ga_best": -256.07}
[PYTHON]: {"iteracao": 16, "ga_best": -256.85}
[PYTHON]: {"iteracao": 17, "ga_best": -256.85}
[PYTHON]: {"iteracao": 18, "ga_best": -259.66}
[PYTHON]: {"iteracao": 19, "ga_best": -391.72}
[PYTHON]: {"iteracao": 20, "ga_best": -391.72}
[PYTHON]: {"iteracao": 21, "ga_best": -392.39}
[PYTHON]: {"iteracao": 22, "ga_best": -392.67}
[PYTHON]: {"iteracao": 23, "ga_best": -394.87}
[PYTHON]: {"iteracao": 24, "ga_best": -396.87}
[PYTHON]: {"iteracao": 25, "ga_best": -396.87}
[PYTHON]: {"iteracao": 26, "ga_best": -398.76}
[PYTHON]: {"iteracao": 27, "ga_best": -398.76}
[PYTHON]: {"iteracao": 28, "ga_best": -398.76}
[PYTHON]: {"iteracao": 29, "ga_best": -400.76}
[PYTHON]: {"iteracao": 30, "ga_best": -401.45}
[PYTHON]: {"iteracao": 31, "ga_best": -401.63}
[PYTHON]: {"iteracao": 32, "ga_best": -409.82}
[PYTHON]: {"iteracao": 33, "ga_best": -409.82}
[PYTHON]: {"iteracao": 34, "ga_best": -409.82}
[PYTHON]: {"iteracao": 35, "ga_best": -417.5}
[PYTHON]: {"iteracao": 36, "ga_best": -444.69}
[PYTHON]: {"iteracao": 37, "ga_best": -444.69}
[PYTHON]: {"iteracao": 38, "ga_best": -445.63}
[PYTHON]: {"iteracao": 39, "ga_best": -445.63}
[PYTHON]: {"iteracao": 40, "ga_best": -445.63}
[PYTHON]: {"iteracao": 41, "ga_best": -445.63}
[PYTHON]: {"iteracao": 42, "ga_best": -445.63}
[PYTHON]: {"iteracao": 43, "ga_best": -445.96}
[PYTHON]: {"iteracao": 44, "ga_best": -451.01}
[PYTHON]: {"iteracao": 45, "ga_best": -451.01}
[PYTHON]: {"iteracao": 46, "ga_best": -466.22}
[PYTHON]: {"iteracao": 47, "ga_best": -466.22}
[PYTHON]: {"iteracao": 48, "ga_best": -466.22}
[PYTHON]: {"iteracao": 49, "ga_best": -466.22}
[PYTHON]: {"iteracao": 50, "ga_best": -467.31}
[PYTHON]: DEBUG: Finalizado com sucesso.

>>> [JAVA] INICIANDO: BATTLE -> modelo10.exe
[PYTHON]: DEBUG: Executavel encontrado: modelo10.exe
[PYTHON]: DEBUG: Config: battle, Dim: 9
[PYTHON]: DEBUG: Iniciando loop principal...
[PYTHON]: {"iteracao": 1, "pso_best": -24.56, "ga_best": -90.4}
[PYTHON]: {"iteracao": 2, "pso_best": -126.41, "ga_best": -120.38}
[PYTHON]: {"iteracao": 3, "pso_best": -236.37, "ga_best": -165.74}
[PYTHON]: {"iteracao": 4, "pso_best": -237.03, "ga_best": -165.74}
[PYTHON]: {"iteracao": 5, "pso_best": -237.1, "ga_best": -185.64}
[PYTHON]: {"iteracao": 6, "pso_best": -237.99, "ga_best": -185.64}
[PYTHON]: {"iteracao": 7, "pso_best": -239.59, "ga_best": -185.64}
[PYTHON]: {"iteracao": 8, "pso_best": -242.01, "ga_best": -185.64}
[PYTHON]: {"iteracao": 9, "pso_best": -242.92, "ga_best": -215.58}
[PYTHON]: {"iteracao": 10, "pso_best": -242.92, "ga_best": -228.66}
[PYTHON]: {"iteracao": 11, "pso_best": -242.92, "ga_best": -228.66}
[PYTHON]: {"iteracao": 12, "pso_best": -242.92, "ga_best": -244.81}
[PYTHON]: {"iteracao": 13, "pso_best": -242.92, "ga_best": -246.97}
[PYTHON]: {"iteracao": 14, "pso_best": -242.92, "ga_best": -246.97}
[PYTHON]: {"iteracao": 15, "pso_best": -242.92, "ga_best": -246.97}
[PYTHON]: {"iteracao": 16, "pso_best": -242.92, "ga_best": -252.61}
[PYTHON]: {"iteracao": 17, "pso_best": -242.92, "ga_best": -252.61}
[PYTHON]: {"iteracao": 18, "pso_best": -242.92, "ga_best": -254.37}
[PYTHON]: {"iteracao": 19, "pso_best": -242.92, "ga_best": -254.37}
[PYTHON]: {"iteracao": 20, "pso_best": -242.92, "ga_best": -254.37}
[PYTHON]: {"iteracao": 21, "pso_best": -242.92, "ga_best": -254.37}
[PYTHON]: {"iteracao": 22, "pso_best": -242.92, "ga_best": -262.02}
[PYTHON]: {"iteracao": 23, "pso_best": -242.92, "ga_best": -262.02}
[PYTHON]: {"iteracao": 24, "pso_best": -242.92, "ga_best": -262.02}
[PYTHON]: {"iteracao": 25, "pso_best": -242.92, "ga_best": -264.02}
[PYTHON]: {"iteracao": 26, "pso_best": -242.92, "ga_best": -264.02}
[PYTHON]: {"iteracao": 27, "pso_best": -242.92, "ga_best": -264.02}
[PYTHON]: {"iteracao": 28, "pso_best": -242.92, "ga_best": -264.02}
[PYTHON]: {"iteracao": 29, "pso_best": -242.92, "ga_best": -272.89}
[PYTHON]: {"iteracao": 30, "pso_best": -242.92, "ga_best": -272.89}
[PYTHON]: {"iteracao": 31, "pso_best": -242.92, "ga_best": -272.89}
[PYTHON]: {"iteracao": 32, "pso_best": -242.92, "ga_best": -274.89}
[PYTHON]: {"iteracao": 33, "pso_best": -242.92, "ga_best": -274.89}
[PYTHON]: {"iteracao": 34, "pso_best": -242.92, "ga_best": -274.89}
[PYTHON]: {"iteracao": 35, "pso_best": -242.92, "ga_best": -275.14}
[PYTHON]: {"iteracao": 36, "pso_best": -242.92, "ga_best": -275.22}
[PYTHON]: {"iteracao": 37, "pso_best": -242.92, "ga_best": -275.22}
[PYTHON]: {"iteracao": 38, "pso_best": -242.92, "ga_best": -275.22}
[PYTHON]: {"iteracao": 39, "pso_best": -242.92, "ga_best": -275.22}
[PYTHON]: {"iteracao": 40, "pso_best": -242.92, "ga_best": -275.22}
[PYTHON]: {"iteracao": 41, "pso_best": -242.92, "ga_best": -281.23}
[PYTHON]: {"iteracao": 42, "pso_best": -242.92, "ga_best": -281.23}
[PYTHON]: {"iteracao": 43, "pso_best": -242.92, "ga_best": -281.39}
[PYTHON]: {"iteracao": 44, "pso_best": -242.92, "ga_best": -281.39}
[PYTHON]: {"iteracao": 45, "pso_best": -242.92, "ga_best": -281.71}
[PYTHON]: {"iteracao": 46, "pso_best": -242.92, "ga_best": -281.71}
[PYTHON]: {"iteracao": 47, "pso_best": -242.92, "ga_best": -281.88}
[PYTHON]: {"iteracao": 48, "pso_best": -242.92, "ga_best": -299.67}
[PYTHON]: {"iteracao": 49, "pso_best": -242.92, "ga_best": -299.67}
[PYTHON]: {"iteracao": 50, "pso_best": -242.92, "ga_best": -299.67}
[PYTHON]: DEBUG: Finalizado com sucesso.
